# SNUPy

./: README.md  pyproject.toml
src/: README.md
src/Clustering/: KMeans.py
src/Datasets/: irisdata.py
src/Neural_Networks/: HiddenLayerNN.py  SingleLayerNN.py
